# staplechain

./: .gitignore  LICENSE  Pipfile  README.md  pyproject.toml  stapler.ipynb
staplechain/: __init__.py  encoding.py  hashing.py  staple.py  steganography.py
staplechain/shims/: openai.py
